# org.gmplib-gmp

./: CMakeLists.txt
.github/workflows/: main.yml
gmp/: CMakeLists.txt
gmp/installer/: install.lua  libgmp.xml
